@@ -1,8 +1,15 @@
 Version 2.2.017
+    Added a setting in advanced.yml to ignore attack cooldowns (see notes)
     Fixed a bug with Mace permissions (thanks SrBedrock)
     Updated zh_CN locale (thanks libook)
     Updated pt_BR locale (thanks JesusRuescas)
     Updated fr locale (thanks Ted-18)
+
+    NOTES:
+    Skills.General.Attack_Cooldown.Adjust_Skills_For_Attack_Cooldown is a new setting in advanced.yml that will allow you to ignore attack cooldowns for the combat skills.
+    When a player spams an attack, have a reduced amount of bonus damage from mcMMO and reduced chance for chance-on-hit subskills to activate.
+    You can have mcMMO ignore this value and apply full bonus damage and full chance to proc abilities by setting this to false.
+
 Version 2.2.016
     (SQL) Fixed a bug where skill cooldowns were being loaded for players incorrectly
 
